--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@ header {
     background-color: #7C5E99;
     border-bottom: 10px solid #000;
     padding: 10px 20px;
+    margin-bottom: 5px;
     justify-content: space-between;
 }
 
