--- a/css/components/action.css
+++ b/css/components/action.css
@@ -1,22 +1,4 @@
-header {
-    display: flex;
-    background-color: #7C5E99;
-    border-bottom: 10px solid #000;
-    padding: 10px 20px;
-    margin-bottom: 5px;
-    justify-content: space-between;
-}
-
-img{
-    box-shadow: 1px 1px 0px #000;
-}
-
-nav {
-    
-    text-align: right;
-}
-
-a {
+.action {
     display: inline-flex;
     align-items: center;
     color: aliceblue;
@@ -27,7 +9,7 @@ a {
     margin-right: 30px;
 }
 
-a::before {
+.action::before {
     content: "";
     background-color: #F25A70;
     width: 10px;
@@ -35,6 +17,6 @@ a::before {
     margin-right: 10px;
 }
 
-a:hover{
+.action:hover{
     color: #5f2497;
 }
