--- a/css/components/card-project.css
+++ b/css/components/card-project.css
@@ -5,7 +5,7 @@
     background-color: #5f2497;
     width: 280px;
     height: 280px;
-    box-shadow: 10px 10px 0 #000;
+    box-shadow: 10px 10px 0 #fff;
 }
 
 .card-project.-blue{
