Chance action to main-action

--- a/css/components/buttom.css
+++ b/css/components/buttom.css
@@ -1,7 +1,7 @@
 
 .button {
     display: inline-block;
-    background-color: #F25A70;
+    background-color: #1BBBD0;
     padding: 18px 20px;
     box-shadow: 5px 5px 0px #000;
     margin-right: 0px;
