--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,6 +1,6 @@
 .header {
     display: flex;
-    background-color: #7C5E99;
+    background-color: #4C5B84;
     border-bottom: 10px solid #000;
     padding: 10px 20px;
     justify-content: space-between;
