--- a/css/components/main-title.css
+++ b/css/components/main-title.css
@@ -1,7 +1,7 @@
 .main-title {
     font-family: 'Press Start 2P';
     font-size: 40px;
-    color: #F25A70;
+    color: #1BBBD0;
     text-shadow: 4px 4px 0 #000;
     padding-bottom: 10px;
 }
