--- a/css/components/skill-section.css
+++ b/css/components/skill-section.css
@@ -1,5 +1,5 @@
 .skill-section {
-    background-color: #F25A70;
+    background-color: #1BBBD0;
     padding-top: 50px;
     padding-bottom: 100px;
     border-bottom: 10px solid #5f2497;
@@ -14,5 +14,5 @@
 }
 
 .skill-section.-bdFirst{
-    border-bottom: 10px solid #F25A70;
+    border-bottom: 10px solid #1BBBD0;
 }
