--- a/css/components/main-banner.css
+++ b/css/components/main-banner.css
@@ -1,4 +1,4 @@
-.banner {
+.main-banner {
     box-sizing: border-box;
     background-image: url(../../assets/img/[000180]2.jpg);
     background-repeat: no-repeat;
@@ -12,17 +12,17 @@
     display: flex;
 }
 
-.banner .wrapper {
+.main-banner .wrapper {
     display: flex;
     flex-direction: column;
     width: 750px;
 }
 
-.banner .box {
+.main-banner .box {
     margin-bottom: 40px;
 }
 
-.banner .navegation {
+.main-banner .navegation {
     display: flex;
     justify-content: space-evenly;
 }
