--- a/css/components/main-button.css
+++ b/css/components/main-button.css
@@ -1,5 +1,5 @@
 
-.button {
+.main-button {
     display: inline-block;
     background-color: #1BBBD0;
     padding: 18px 20px;
@@ -11,7 +11,7 @@
     text-decoration: none;
 }
 
-.button:hover{
+.main-button:hover{
     background-color: #5f2497;
     color: aliceblue;
 
